Ensure the main paste handler is executed only when there's no tool handler available

BUG: 452898